--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,17 @@ h1,h2,h3,h4,h5,h6 {
   opacity: 1;
   height: 20rem;
 }
+
+
+.con2 {
+  /* display: none; */
+  opacity: 0;
+  height: 10rem;
+  transition: .4s ease;
+}
+
+.con.active2 {
+  /* display: block; */
+  opacity: 1;
+  height: 20rem;
+}
